menu bar not visible issue solved

--- a/src/App.css
+++ b/src/App.css
@@ -472,7 +472,7 @@ section {
   justify-content: center;
 }
 
-.container {
+.skill-container {
   max-width: 1000px;
   margin: 0 auto;
   width: 100%;
